--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@ classical Latin literature from 45 BC, making it over
 2000 years old. Richard McClintock.
                   </p>
                   <ul>
-                    <li id="list-item"> <img src="/images/icon.png" alt=""> Contrary to popular belief, is not simply.</li>
-                    <li id="list-item"> <img src="/images/icon.png" alt=""> Contrary to popular belief.</li>
-                    <li id="list-item"> <img src="/images/icon.png" alt=""> Contrary to popular , is not simply</li>
-                    <li id="list-item"> <img src="/images/icon.png" alt=""> Contrary to popular belief, is not simply.</li>
-                    <li id="list-item"> <img src="/images/icon.png" alt=""> Contrary to popular simply</li>
+                    <li id="list-item"> <img src="images/icon.png" alt=""> Contrary to popular belief, is not simply.</li>
+                    <li id="list-item"> <img src="images/icon.png" alt=""> Contrary to popular belief.</li>
+                    <li id="list-item"> <img src="images/icon.png" alt=""> Contrary to popular , is not simply</li>
+                    <li id="list-item"> <img src="images/icon.png" alt=""> Contrary to popular belief, is not simply.</li>
+                    <li id="list-item"> <img src="images/icon.png" alt=""> Contrary to popular simply</li>
                   </ul>
             </div>
         </section>
@@ -109,10 +109,10 @@ classical Latin literature from 45 BC, making it over
         </p>
         <h3 class="section-title">Skills</h3>
         <div class="about-list">
-          <li id="list-item"><img src="/images/icon.png" alt=""> Proficient in programming languages such as Java, JavaScript, and C++</li>
-          <li id="list-item"><img src="/images/icon.png" alt=""> Strong understanding of data structures and algorithms</li>
-          <li id="list-item"><img src="/images/icon.png" alt=""> Experience with database management systems such as MySQL and Oracle</li>
-          <li id="list-item"><img src="/images/icon.png" alt=""> Ksnowledge of web development technologies such as HTML, CSS, and JavaScript</li>
+          <li id="list-item"><img src="images/icon.png" alt=""> Proficient in programming languages such as Java, JavaScript, and C++</li>
+          <li id="list-item"><img src="images/icon.png" alt=""> Strong understanding of data structures and algorithms</li>
+          <li id="list-item"><img src="images/icon.png" alt=""> Experience with database management systems such as MySQL and Oracle</li>
+          <li id="list-item"><img src="images/icon.png" alt=""> Ksnowledge of web development technologies such as HTML, CSS, and JavaScript</li>
          
         </div>
          </div>
